...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fabiohideki.com.tastedacity.RecipeDetailsActivity">

    <Button
        android:id="@+id/bt_ingredients"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
        android:text="@string/steps_title"
        android:textColor="@color/primary_light"
        android:textSize="@dimen/material_text_subhead"
        app:layout_constraintTop_toBottomOf="@+id/bt_ingredients" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_steps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clipToPadding="false"
...
