<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:elevation="2dp"
    app:cardBackgroundColor="@color/primary">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_constraint_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground">

        <TextView
            android:id="@+id/item_recipe_id"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="@color/primary_dark"
            android:backgroundTintMode="src_over"
            android:elevation="2dp"
            android:padding="16dp"
            android:text="#1"
            android:textSize="@dimen/material_text_title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/item_recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/primary_light"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_recipe_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Servings: "
                android:textColor="@color/primary_text"
                android:textSize="@dimen/material_text_caption"
                android:textStyle="bold"
                tools:text="Servings: 8" />

        </LinearLayout>

        <ImageView
            android:id="@+id/item_recipe_imageview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/coffee"
            tools:ignore="MissingConstraints" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>